# creator-os

./: .dependency-cruiser.cjs  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  AUDIT_2026-06-16.md  AUDIT_FINDINGS.md  AUTOPOSTER_AP9_INTEGRATION_PROMPT.md  AUTOPOSTER_AP9_PROMPT.md  AUTOPOSTER_HARDENING_PLAN.md  CONSOLIDATION_DISCOVERY.md  CONSOLIDATION_PLAN.md  CONSOLIDATION_STATUS.md  CORE_PY_DECOMPOSITION_PLAN.md  CREATOR_OS_SYSTEM_MAP.md  FRONTEND_AUDIT_2026-06-16.md  FUNNEL_V1_ATTRIBUTION_SCOPE_20260622.md  HANDOFF-AUDIT1.md  INFRA_HARDENING_PROMPT.md  INFRA_LIFECYCLE_AUDIT.md  INTELLIGENCE_AUDIT.md  INTELLIGENCE_TRACK_PROMPT.md  MERGE_PLAN.md  MONOREPO_MIGRATION_MASTER_PLAN.md  Makefile  OPERATOR_UX_AUDIT.md  OVERNIGHT_EXECUTION.md  OVERNIGHT_STATUS.md  PIPELINE_AUDIT_20260622.md  PIPELINE_STATE.md  PIPELINE_WIRING_PLAN.md  PLAN-REVIEW-LOG.md  PLAN-SCHEDULER.md  PLAN.md  README.md  REMEDIATION_MASTER_PLAN.md  RESEARCH_SYNTHESIS_FOR_CODEX_20260622.md  TRACK9_RIGOR_PROMPT.md  WINNER_DNA_EMBEDDINGS_SCOPE_20260622.md  (+35 more)
python_packages/campaign_factory/: .gitignore  AGENTS.md  CAPTION_OUTCOME_TRACKING_V1.md  CAPTION_OUTCOME_TRACKING_V1_PROOF.json  CLOSED_LOOP_PROOF.json  CLOSED_LOOP_PROOF.md  MIRROR_PROVENANCE.json  README.md  RUNBOOK.md  pyproject.toml
python_packages/campaign_factory/campaign_factory/: acceptance_suite.py  account_eligibility.py  account_health.py  account_memory.py  account_planning.py  ai_disclosure.py  app.py  archive_quality.py  asset_import.py  assignment_eligibility.py  audio_operations.py  audio_recommendations.py  audio_smoke.py  audit_payload.py  autonomy.py  campaign_overview.py  canonical_analyzer_registry.py  caption.py  caption_outcome.py  caption_policy.py  carousel_integrity.py  certification.py  cli.py  cli_dispatch_operations.py  cli_dispatch_pipeline.py  cli_dispatch_scale.py  cli_parser.py  cli_parser_core.py  cli_parser_operations.py  cli_support.py  closed_loop_proof.py  config.py  contentforge_cli.py  contentforge_visual_qc.py  contracts.py  control.py  core.py  core_complexity.py  cost_tracker.py  creative_approval.py  (+103 more)
python_packages/campaign_factory/docs/: creator_os_9_10_professionalization_plan.md
python_packages/campaign_factory/repurposer/: __init__.py  config.py  pipeline.py
python_packages/campaign_factory/schemas/: assignment_eligibility.v1.example.json  assignment_eligibility.v1.schema.json  audio_catalog_export.v1.example.json  campaign_draft_payload.v1.example.json  campaign_draft_payload.v1.schema.json  campaign_draft_payload.v2.example.json  caption_outcome_context.v1.example.json  generated_asset_lineage.v1.example.json  generated_asset_lineage.v1.schema.json  kling_3_video_prompt.v1.schema.json  motion_edit_render.v1.example.json  pattern_card.v1.schema.json  performance_sync.v1.example.json  post_metric_history.read.v1.example.json  post_metric_history_read.v1.example.json  recommendation_next_batch.v1.example.json  recommendation_next_batch.v1.schema.json  repurposing_plan.v1.schema.json  variant_assignment.v1.example.json  video_analysis.v1.schema.json
python_packages/campaign_factory/scripts/: caption_outcome_e2e_proof.py  pipeline_audio_smoke.py  pipeline_smoke.py  real_provider_phase_driver.py  stacey_closed_loop_proof.py
python_packages/campaign_factory/tests/: campaign_asset_test_support.py  campaign_generation_test_support.py  campaign_learning_test_support.py  campaign_test_support.py  conftest.py  test_account_eligibility.py  test_accounts_eligibility.py  test_app_request_defaults.py  test_asset_lifecycle.py  test_assignment_eligibility.py  test_campaign_knowledge_pack.py  test_campaign_module_architecture.py  test_cli_api_contracts.py  test_closed_loop_proof.py  test_config_paths.py  test_content_quality_gates.py  test_contentforge_cli_contract.py  test_core.py  test_core_characterization.py  test_core_extraction_facade.py  test_creative_approval.py  test_distribution_uniqueness.py  test_evidence_foundation.py  test_fileops.py  test_generation_execution_plan.py  test_generation_plans_spend.py  test_generation_workflow.py  test_learning.py  test_learning_cohort.py  test_learning_eligibility_consumers.py  test_learning_fanout.py  test_learning_score.py  test_library_reuse.py  test_lineage_v2.py  test_live_read_only_probes.py  test_local_api_auth.py  test_local_motion_admission.py  test_migration_runtime_safety.py  test_motion_generation_stage.py  test_operational_readiness.py  (+21 more)
python_packages/reel_factory/: .gitignore  AGENTS.md  CANONICAL_DATA_OWNERS.md  CURRENT_PRODUCTION_FLOW.md  DECISIONS.md  DO_NOT_CHANGE.md  Launch reel factory.command  MIRROR_PROVENANCE.json  PIPELINE_BOUNDARIES.md  README.md  REPO_MAP.md  SYSTEM_OVERVIEW.md  VERIFICATION_WATCH_ITEMS.md  ai_visual_qc.py  analysis_reports.py  anatomy_qc.py  approval_board.py  asset_prompt_contract.py  audio_intent.py  audio_library_import.py  audio_mux.py  audio_provider.py  audio_refresh.py  benchmark_harness.py  campaign_factory.py  campaign_store.py  caption_bank.py  caption_generation_log.py  caption_intake.py  caption_render.py  caption_scene_fit.py  deprecated_generators.py  discoverability_safety.py  embedding_index.py  embedding_provider.py  example_caption.json  export_approved.py  feature_extract.py  fetch_models.py  frame_hash_check.py  (+72 more)
python_packages/reel_factory/01_captions/: approved_intake_20260625.json  clip_001.json  clip_002.json  clip_003.json  clip_004.json  clip_005.json  clip_006.json  clip_007.json  clip_008.json  clip_009.json  clip_010.json
python_packages/reel_factory/accounts/: example.json
python_packages/reel_factory/caption_banks/: README.md  bad_caption_quarantine.json  banks.json  candidate_intake.json  candidate_intake_full_review_archive.json  candidate_intake_full_review_archive.md  candidate_intake_placement_review.md  candidate_intake_topic_review.md  caption_source_inventory_20260629.csv  caption_source_inventory_20260629.json  caption_static_swipe_decisions.json  (+10 more)
python_packages/reference_factory/: .gitignore  AGENTS.md  MIRROR_PROVENANCE.json  README.md  RUNBOOK.md  pyproject.toml
(+3235 files in other folders)
