[project]
name = "creator-os-workspace"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "campaign-factory",
  "pipeline-contracts",
  "reference-factory",
  "reel-factory",
]

[tool.uv.workspace]
members = ["python_packages/*", "packages/pipeline_contracts"]

[tool.uv.sources]
campaign-factory = { workspace = true }
pipeline-contracts = { workspace = true }
reference-factory = { workspace = true }
reel-factory = { workspace = true }

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = [
  "packages/pipeline_contracts/tests",
  "python_packages/campaign_factory/tests",
  "python_packages/reel_factory/tests",
  "python_packages/reference_factory/tests",
]
pythonpath = [
  "packages/pipeline_contracts",
  "python_packages/campaign_factory",
  "python_packages/reel_factory",
  "python_packages/reference_factory",
]
