[project]
name = "creator-os-workspace"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "campaign-factory",
  "httpx>0.28",
  "pipeline-contracts",
  "pytest>=8,<9",
  "reference-factory",
  "reel-factory",
]

[tool.uv.workspace]
members = ["python_packages/*", "packages/pipeline_contracts"]

[tool.uv.sources]
campaign-factory = { workspace = true }
pipeline-contracts = { workspace = true }
reference-factory = { workspace = true }
reel-factory = { workspace = true }

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = [
  "packages/pipeline_contracts/tests",
  "python_packages/campaign_factory/tests",
  "python_packages/reel_factory/tests",
  "python_packages/reference_factory/tests",
]
pythonpath = [
  "packages/pipeline_contracts",
  "python_packages/campaign_factory",
  "python_packages/reel_factory",
  "python_packages/reference_factory",
]

[dependency-groups]
dev = [
    "import-linter>=2.11",
    "ruff>=0.8,<1",
]

[tool.ruff]
target-version = "py311"
extend-exclude = [
  ".venv",
  ".uv-cache",
  "node_modules",
  "graphify-out",
  "**/static/vendor",
]

[tool.ruff.lint]
# Conservative start: real-bug rules (pyflakes) + import sorting + pyupgrade.
# Broaden later; this keeps the first adoption green and meaningful.
select = ["F", "I", "UP"]

[tool.importlinter]
root_packages = [
  "campaign_factory",
  "pipeline_contracts",
  "reference_factory",
  "repurposer",
]

[[tool.importlinter.contracts]]
name = "pipeline_contracts remains foundational"
type = "forbidden"
source_modules = ["pipeline_contracts"]
forbidden_modules = [
  "campaign_factory",
  "reference_factory",
  "repurposer",
]

[[tool.importlinter.contracts]]
name = "reference_factory does not import runtime campaign ownership"
type = "forbidden"
source_modules = ["reference_factory"]
forbidden_modules = [
  "campaign_factory",
  "repurposer",
]

[[tool.importlinter.contracts]]
name = "campaign_factory core does not import reference_factory directly"
type = "forbidden"
source_modules = ["campaign_factory"]
forbidden_modules = ["reference_factory"]
