[project]
name = "creator-os-workspace"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "campaign-factory",
  "creator-os-core",
  "pdqhash>=0.2.8,<1",
  "pipeline-contracts",
  "pytest>=9.0.3,<10",
  "reference-factory",
  "reel-factory",
]

[tool.uv.workspace]
members = ["python_packages/*", "packages/pipeline_contracts", "packages/creator_os_core"]

[tool.uv.sources]
campaign-factory = { workspace = true }
creator-os-core = { workspace = true }
pipeline-contracts = { workspace = true }
reference-factory = { workspace = true }
reel-factory = { workspace = true }

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
markers = [
  "slow: heavy real-ffmpeg/real-render suites; deselect with -m 'not slow'",
]
testpaths = [
  "packages/creator_os_core/tests",
  "packages/pipeline_contracts/tests",
  "python_packages/campaign_factory/tests",
  "python_packages/reel_factory/tests",
  "python_packages/reference_factory/tests",
]
pythonpath = [
  "packages/pipeline_contracts",
  "packages/creator_os_core",
  "python_packages/campaign_factory",
  "python_packages/reel_factory",
  "python_packages/reference_factory",
]

[dependency-groups]
dev = [
    "httpx2>=2,<3",
    "hypothesis-jsonschema>=0.23,<1",
    "import-linter>=2.11",
    "mypy>=1.11,<2",
    "ruff>=0.8,<1",
    "setuptools>=83",
]

[tool.mypy]
python_version = "3.11"
# Lenient adoption across a large, mostly-untyped codebase: catch real type
# errors (bad calls, attr typos) without demanding annotations everywhere.
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = false
exclude = "(^|/)(\\.venv|\\.uv-cache|node_modules|graphify-out|tests)/"
# CI strictly gates the type-clean Pipeline Contracts package. The remaining
# backlog is also count-gated by `scripts/check_mypy_backlog.py` so it cannot
# grow or be hidden by checking fewer files. Current ceilings are Campaign
# Factory 889, Reference Factory 169, and Reel Factory 95. Lower a ceiling when
# a package improves; graduate the package to the strict gate at zero.

[tool.ruff]
target-version = "py311"
extend-exclude = [
  ".venv",
  ".uv-cache",
  "node_modules",
  "graphify-out",
  "**/static/vendor",
]

[tool.ruff.lint]
# Conservative start: real-bug rules (pyflakes) + import sorting + pyupgrade.
# Broaden later; this keeps the first adoption green and meaningful.
select = ["F", "I", "UP"]

[tool.importlinter]
root_packages = [
  "campaign_factory",
  "creator_os_core",
  "pipeline_contracts",
  "reference_factory",
  "reel_factory",
  "repurposer",
]

[[tool.importlinter.contracts]]
name = "pipeline_contracts remains foundational"
type = "forbidden"
source_modules = ["pipeline_contracts"]
forbidden_modules = [
  "campaign_factory",
  "reference_factory",
  "reel_factory",
  "repurposer",
]

[[tool.importlinter.contracts]]
name = "creator_os_core remains foundational"
type = "forbidden"
source_modules = ["creator_os_core"]
forbidden_modules = [
  "campaign_factory",
  "pipeline_contracts",
  "reference_factory",
  "reel_factory",
  "repurposer",
]

[[tool.importlinter.contracts]]
name = "reference_factory remains a knowledge worker"
type = "forbidden"
source_modules = ["reference_factory"]
forbidden_modules = [
  "campaign_factory",
  "reel_factory",
  "repurposer",
]

[[tool.importlinter.contracts]]
name = "campaign_factory core does not import reference_factory directly"
type = "forbidden"
source_modules = ["campaign_factory"]
forbidden_modules = ["reference_factory"]

[[tool.importlinter.contracts]]
name = "reel_factory does not import campaign ownership"
type = "forbidden"
source_modules = ["reel_factory"]
forbidden_modules = [
  "campaign_factory",
  "reference_factory",
  "repurposer",
]
