[project]
name = "campaign-factory"
version = "0.1.0"
description = "Local campaign control layer for Higgsfield/Juno33 sources, reel_factory renders, ContentForge audits, and ThreadsDash drafts"
requires-python = ">=3.11"
dependencies = [
  "creator-os-core",
  "fastapi>=0.115,<1",
  "pipeline-contracts",
  "reel-factory",
  "requests>=2.32,<3",
  "scenedetect-headless>=0.7,<0.8",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3,<10"]

[project.scripts]
campaign-factory = "campaign_factory.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv.sources]
creator-os-core = { workspace = true }
pipeline-contracts = { workspace = true }
reel-factory = { workspace = true }

[build-system]
requires = ["setuptools>=83"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["campaign_factory*", "repurposer*"]
exclude = ["campaigns*", "docs*", "schemas*", "scripts*", "tests*"]
