[project]
name = "reel-factory"
version = "0.1.0"
description = "Local deterministic short-form reel rendering and review workflow"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "python-multipart>=0.0.9,<1",
  "Pillow>=10,<14",
  "pilmoji>=2.0,<3",
  "imagehash>=4.3,<5",
  "rapidfuzz>=3.9,<4",
  "watchdog>=4,<7",
  "yt-dlp>=2024.8.6,<2027.0",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "playwright>=1.49,<2", "mypy>=1.11,<2"]
vision = ["opencv-python>=4.9,<5", "mediapipe>=0.10,<1"]
identity = ["insightface>=0.7,<1", "onnxruntime>=1.18,<2", "opencv-python>=4.9,<5"]
ai = ["sentence-transformers>=3,<6", "mlx-whisper>=0.4,<1", "einops>=0.8,<1", "timm>=1,<2", "torchvision>=0.18,<1"]
pango = ["pycairo>=1.26,<2", "PyGObject>=3.46,<4"]
queue = ["redis>=5,<6", "rq>=1.16,<3"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["experiments"]
py-modules = [
  "ai_visual_qc",
  "analysis_reports",
  "asset_prompt_contract",
  "audio_intent",
  "audio_mux",
  "audio_provider",
  "audio_refresh",
  "benchmark_harness",
  "campaign_factory",
  "campaign_store",
  "caption_bank",
  "caption_generation_log",
  "caption_intake",
  "caption_render",
  "caption_scene_fit",
  "deprecated_generators",
  "discoverability_safety",
  "embedding_index",
  "embedding_provider",
  "export_approved",
  "generate_assets",
  "generate_prompts",
  "graph_builder",
  "grid_crop",
  "hook_ai",
  "hook_library",
  "hook_spinner",
  "hook_tools",
  "higgsfield_cost_preflight",
  "identity_verification",
  "intelligence_store",
  "local_api_auth",
  "manifest",
  "media_metadata",
  "metrics_import",
  "metrics_store",
  "next_batch",
  "overnight_grid_worker",
  "placement",
  "placement_scorer",
  "post_render",
  "post_render_acceptance",
  "posting_ledger",
  "preflight",
  "probe",
  "project_config",
  "qc_check",
  "queue_admin",
  "rate_output",
  "readiness_check",
  "recipe_loader",
  "reel_gui",
  "reel_motion_prompt",
  "reel_pipeline",
  "reel_url_import",
  "reference_analyzer",
  "reference_grid_production",
  "render_plan",
  "render_queue",
  "review_truth",
  "review_batch_guard",
  "safe_zone",
  "slideshow_factory",
  "sscd_check",
  "sscd_video",
  "still_to_reel",
  "thumbnail_gen",
  "variation_engine",
  "virality_qc",
  "whisper_sync",
  "winner_dna",
  "worker",
]
