[project]
name = "reel-factory"
version = "0.1.0"
description = "Local deterministic short-form reel rendering and review workflow"
requires-python = ">=3.11"
dependencies = [
  "creator-os-core>=0.1,<0.2",
  "cryptography>=45,<50",
  "Pillow>=12.3,<14",
  "pilmoji>=2.0,<3",
  "imagehash>=4.3,<5",
  "rapidfuzz>=3.9,<4",
  "requests>=2.32,<3",
  "watchdog>=4,<7",
  "yt-dlp>=2024.8.6,<2027.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3,<10", "playwright>=1.49,<2", "mypy>=1.11,<2"]
vision = ["opencv-python>=4.9,<5", "mediapipe>=0.10,<1"]
identity = ["insightface>=0.7,<1", "onnxruntime>=1.18,<2", "opencv-python>=4.9,<5"]
ai = ["sentence-transformers>=3,<6", "mlx-whisper>=0.4,<1", "timm>=1,<2", "torch>=2.13,<3", "torchvision>=0.28,<1"]
pango = ["pycairo>=1.26,<2", "PyGObject>=3.46,<4"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
  "slow: heavy real-ffmpeg/real-render suites; deselect with -m 'not slow'",
]

[build-system]
requires = ["setuptools>=83"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["reel_factory*"]

[tool.uv.sources]
creator-os-core = { workspace = true }
