[project]
name = "reference-factory"
version = "0.1.0"
description = "Local reference reel corpus analyzer for high-performing short-form videos."
requires-python = ">=3.11"
dependencies = [
  "creator-os-core",
  "fastapi>=0.115",
  "pipeline-contracts",
  "pydantic>=2,<3",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
embeddings = ["Pillow>=12.3,<14", "timm>=1,<2", "torch>=2.13,<3", "torchvision>=0.28,<1"]
gemini = ["google-genai>=1,<3"]
test = ["pytest>=9.0.3,<10"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "slow: heavy real-ffmpeg/real-render suites; deselect with -m 'not slow'",
]

[tool.uv.sources]
creator-os-core = { workspace = true }
pipeline-contracts = { workspace = true }

[build-system]
requires = ["setuptools>=83"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["reference_factory*"]
exclude = ["tests*"]
